tests/e2e/multi_line_indented_invalid.error
Error: syntax error in story at line 1, column 5

1|    a = '\
          ^

E0041: `'` is not allowed here
